# TF-PSA-Crypto

./: .gitmodules  CMakeLists.txt
core/: CMakeLists.txt  tf_psa_crypto_check_config.h
drivers/: CMakeLists.txt  builtin.cmake  driver.cmake
drivers/builtin/: CMakeLists.txt
drivers/builtin/include/mbedtls/: config_adjust_legacy_crypto.h  crypto_builtin_composites.h  crypto_builtin_key_derivation.h  crypto_builtin_primitives.h
drivers/builtin/include/mbedtls/private/: chacha20.h  config_adjust_test_accelerators.h  config_psa.h  crypto_adjust_config_enable_builtins.h  crypto_adjust_config_tweak_builtins.h  ecp.h  rsa.h
drivers/builtin/src/: aesce.c  chacha20.c  chacha20_neon.c  chacha20_neon.h  cipher.c  crypto_oid.h  ecdsa.c  ecp.c  pk.c  pk_ecc.c  pk_internal.h  pk_rsa.c  pkparse.c  pkwrite.c  psa_crypto_aead.c  psa_crypto_cipher.c  psa_crypto_ecp.c  rsa.c  rsa_alt_helpers.c
drivers/everest/: CMakeLists.txt
drivers/p256-m/: CMakeLists.txt
include/: CMakeLists.txt
include/mbedtls/: asn1write.h  pk.h
include/psa/: crypto_config.h  crypto_driver_contexts_composites.h  crypto_driver_contexts_primitives.h  crypto_sizes.h
include/tf-psa-crypto/: build_info.h
include/tf-psa-crypto/private/: crypto_adjust_config_auto_enabled.h  crypto_adjust_config_dependencies.h  crypto_adjust_config_derived.h  crypto_adjust_config_key_pair_types.h  crypto_adjust_config_support.h  crypto_adjust_config_synonyms.h
scripts/: c_header_guards.py
scripts/data_files/driver_templates/: psa_crypto_driver_wrappers.h.jinja
tests/: CMakeLists.txt
tests/configs/: user-config-test-driver-extension.h
tests/scripts/: components-build-system.sh  components-configuration-crypto.sh  components-configuration.sh  generate_test_driver.py  libtestdriver1.cmake
tests/suites/: test_suite_asn1write.function  test_suite_cipher.aes.data  test_suite_cipher.function  test_suite_ecdh.data  test_suite_ecp.data  test_suite_pk.data  test_suite_pk.function  test_suite_pkcs1_v15.function  test_suite_pkcs1_v21.function  test_suite_pkwrite.data  test_suite_pkwrite.function  test_suite_psa_crypto.function  test_suite_psa_crypto_persistent_key.function  test_suite_rsa.data  test_suite_rsa.function
